[package]
name = "steam-profile"
version = "0.1.0"
edition = "2021"

[dependencies]
owo-colors = { version = "4.0.0", optional = true}
tabled = { version = "0.15.0", optional = true}

scraper = "0.19.0"
ureq = "2.10.1"
regex = "1.10.6"

serde = { version ="1.0.203", features = ["derive"] }
serde_json = "1.0.118"


tokio = { version = "1.39.2", features = ["rt-multi-thread", "macros"],  optional = true}
tokio-macros = {version = "2.4.0", optional = true} 

anyhow = "1.0.86"
thiserror = "1.0.63"
[features]
default = ["print","sync"]
sync = []
async = ["dep:tokio","tokio-macros"]
print =["dep:owo-colors", "dep:tabled"]
